[project]
name = "transformer-code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "huggingface-hub[hf-xet]>=0.30.2",
    "ipywidgets>=8.1.6",
    "scikit-learn>=1.6.1",
    "transformers[torch]>=4.51.3",
]

[project.optional-dependencies]
cpu = [
    "transformers[sentencepiece]>=2.3.0",
    "torch==2.5.0",
    "torchvision==0.20.0",
]
cu121 = [
    "transformers[sentencepiece]>=2.3.0",
    "torch==2.5.0",
    "torchvision==0.20.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",extra = "cpu" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu121" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
